# Data_Analyst_Portfolio

./: .gitattributes  .gitignore  Gasolina_Mexico.ipynb  Google_DAC_Case_Study_1.ipynb  README.md  prices.xml  pyproject.toml
.ipynb_checkpoints/: Gasolina_Mexico-checkpoint.ipynb
data/shared/: README.md  SOURCES.md
projects/01-exploratory-data-analysis/: README.md  pyproject.toml
projects/02-data-cleaning/: README.md  pyproject.toml
projects/03-statistical-analysis/: README.md  pyproject.toml
projects/04-data-visualization/: README.md  pyproject.toml
projects/05-machine-learning/: README.md  pyproject.toml
projects/06-sql-analysis/: README.md  pyproject.toml
projects/07-dashboard/: README.md  pyproject.toml
projects/fitly-churn-analysis/: .gitignore  LICENSE  main.py  pyproject.toml
projects/fitly-churn-analysis/data/raw/: da_fitly_account_info.csv  da_fitly_customer_support.csv  da_fitly_user_activity.csv
projects/fitly-churn-analysis/notebooks/: 01_Data_Cleaning.ipynb  project_context.md
projects/fitly-churn-analysis/src/datacamp_practicalexam.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/fitly-churn-analysis/src/fitly_churn_analysis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
projects/fitly-churn-analysis/src/utils/: config.py
projects/mexico_gas_prices_analyzer/: README.md
projects/mexico_gas_prices_analyzer/data/: places.xml  prices.xml
projects/mexico_gas_prices_analyzer/notebooks/: 00_Data_Preparation.ipynb  01_EDA.ipynb  (+1 more)
projects/templates/: README.md
templates/project-template/: README.md  pyproject.toml
(+6 files in other folders)
