[project]
name = "data-analyst-portfolio"
version = "0.1.0"
description = "Data science and data analysis portfolio projects"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "statsmodels>=0.14",
    "jupyter>=1.0",
    "notebook>=7.0",
    "sqlalchemy>=2.0",
    "streamlit>=1.30",
    "openpyxl>=3.1",
]
